adicionando mapa utilizando googleApi  pelo javascript

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 			<div class="map-wraper3">
 			<div class="map-wraper2">
 
-			<div id="map" class="map"><iframe class="map" width="520" color="black" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=sao%20paulo%20sao%20paulo+(my%20mao)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='http://maps-generator.com/pt'>maps-generator.com</a> <script type='text/javascript' src='https://maps-generator.com/google-maps-authorization/script.js?id=73f9638772e2909b331e3b319640c6ea7e0da29c'></script></div> <!-- mapa -->
+			<div id="mapa" class="map"></div> <!-- mapa -->
 
 		</div><!-- wraper2 -->
 			</div><!-- wraper3 -->
@@ -161,7 +161,9 @@
 		<div class="clear"></div>
 </div><!-- container -->
 </footer>
-
-
+<script 
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnv7y3NuVB3H7-6XXXbtFUYOsvWql_d-8&">
+</script>
+<script  src="../Projeto_03/js/function.js"></script>
 </body>
 </html>
