--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 	<nav class="desktop-menu">
 		<ul>
 			<li><a href="">home</a></li>
-			<li><a href="">serviços</a></li>
-			<li><a href="">sobre</a></li>
-			<li><a href="">contato</a></li>
+			<li><a href="#servicos">serviços</a></li>
+			<li><a href="#sobre">sobre</a></li>
+			<li><a href="#contato">contato</a></li>
 		</ul>
 	</nav>
 
 	<nav class="mobile-menu">
 		<ul>
 			<li><a href="">home</a></li>
-			<li><a href="">serviços</a></li>
-			<li><a href="">sobre</a></li>
-			<li><a href="">contato</a></li>
+			<li><a href="#servicos">serviços</a></li>
+			<li><a href="#sobre">sobre</a></li>
+			<li><a href="#contato">contato</a></li>
 		</ul>
 	</nav>
 
@@ -44,7 +44,7 @@
 	</div><!--container-->
 </header>
 
-<section class="sessao1">
+<section id="servicos" class="sessao1">
 	<div class="container">
 		<div class="texto-sessao1">
 			<h2>Desenvolvemos Sistema Únicos</h2>
@@ -62,7 +62,7 @@
 	</div><!--container-->
 </section><!--sessao1-->
 
-<section class="sessao2">
+<section id="sobre" class="sessao2">
 	<div class="container">
 		<h2>Desenvolvido de pessoas para pessoas</h2>
 		<p>Loren ipsum dolor sit amet, consectetur adipiscing elit. proin sagittis, risus ut tempus condimentum , urna est volutpat augue, a plaeerat ligula magna tincidunt sapien, ut tempus puvnar ante, at euismod orci commodo suscipit. Nunc ut viverra dui. ut efficitur cursus diam a volutpat. sed sagittis pharetra dolor, ac mollis sapien condimentum vitae. Ut in interdum tortor</p>
@@ -113,7 +113,7 @@
 	
 </section><!-- sessao3 -->
 
-<section class="sessao4">
+<section id="contato" class="sessao4">
 	<div class="container">
 
 		<div class="form">
@@ -164,6 +164,9 @@
 <script 
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnv7y3NuVB3H7-6XXXbtFUYOsvWql_d-8&">
 </script>
+<script src="../Projeto_03/js/jquery.js"></script>
 <script  src="../Projeto_03/js/function.js"></script>
+<script src="../Projeto_03/js/script.js"></script>
+<script src="../Projeto_03/js/menu-scrol.js"></script>
 </body>
 </html>
